# SuperTuxScripter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  version.cmake  version.cmake.in
assets/: assets.qrc
assets/examples/: level1.stl
assets/interface/: mainwindow.ui
cmake/: ProvideSquirrel.cmake  deps.cmake
src/: level.cpp  level.h  levelscriptsmodel.cpp  levelscriptsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  projectmodel.cpp  projectmodel.h  projectsmodel.cpp  projectsmodel.h  singleton.h  spritemodel.cpp  spritemodel.h  squirreleditor.cpp  squirreleditor.h  squirrelhighlighter.cpp  squirrelhighlighter.h  squirrellinter.cpp  squirrellinter.h  supertuxthread.cpp  supertuxthread.h  supertuxviewport.cpp
src/qml/: Editor.qml  InspectorDelegate.qml  MainWindow.qml  SequenceImage.qml  SuperTuxCenter.qml  SuperTuxViewport.qml  TextCursor.qml  Workspace.qml  XRay.qml  theme.js
